<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".atividades.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_banner"
            android:contentDescription="@string/login_desc" />

        <TextView
            android:id="@+id/login_titulo"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:gravity="center"
            android:text="@string/cadastro_desc"
            android:theme="@style/ThemeOverlay.MyTitleText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/cadastro_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:baselineAligned="false">

            <EditText
                android:id="@+id/cadastro_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/cadastro_senha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/senha"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cadastro_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cadastro_cadastro"
            android:orientation="horizontal"
            android:paddingRight="16dp"
            android:paddingLeft="16dp">

            <Button
                android:id="@+id/cadastro_btn_registrar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/registrar"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        </LinearLayout>

    </RelativeLayout>

</android.widget.LinearLayout>