<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardCornerRadius="2dp"
            app:contentPadding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tarefa_nome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:textStyle="bold"
                            android:text="@string/txt_title"/>

                        <TextView
                            android:id="@+id/tarefa_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tarefa_nome"
                            android:layout_margin="16dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="italic"
                            android:text="@string/txt_desc"/>

                        <ImageButton
                            android:id="@+id/btn_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@id/tarefa_nome"
                            android:layout_toStartOf="@id/btn_delete"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/editar"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_edit"/>

                        <ImageButton
                            android:id="@+id/btn_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@id/btn_edit"
                            android:background="?selectableItemBackground"
                            android:contentDescription="@string/deletar"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_delete"/>

                </RelativeLayout>

        </android.support.v7.widget.CardView>
</LinearLayout>